# knuth-rs

./: .gitignore  Cargo.toml
.superpowers/sdd/: task-7-report.md
crates/ai/: .gitignore  Cargo.toml  README.md
crates/ai/examples/: anthropic_hello.rs  count_models.rs  gpt55_hello.rs
crates/ai/scripts/: regen_models.sh
crates/ai/src/: api_registry.rs  bedrock_anthropic.rs  bedrock_provider.rs  cli.rs  env_api_keys.rs  event_stream.rs  image_models.rs  image_models_generated.rs  images.rs  images_api_registry.rs  lib.rs  models.generated.json  models.rs  models_generated.rs  oauth.rs  session_resources.rs  sigv4.rs  stream.rs  types.rs  vertex_adc.rs  vertex_provider.rs
crates/ai/src/providers/: amazon_bedrock.rs  anthropic.rs  azure_openai_responses.rs  cloudflare.rs  faux.rs  github_copilot_headers.rs  google.rs  google_shared.rs  google_vertex.rs  mistral.rs  mod.rs  openai_codex_responses.rs  openai_completions.rs  openai_prompt_cache.rs  openai_responses.rs  openai_responses_shared.rs  register_builtins.rs  simple_options.rs  transform_messages.rs
crates/ai/src/providers/images/: mod.rs  openrouter.rs  register_builtins.rs
crates/ai/src/utils/: abort.rs  aws_eventstream.rs  diagnostics.rs  event_stream.rs  hash.rs  headers.rs  json_parse.rs  mod.rs  node_http_proxy.rs  openai_compat_url.rs  overflow.rs  retry.rs  sanitize_unicode.rs  sse.rs  typebox_helpers.rs  validation.rs
crates/ai/src/utils/oauth/: anthropic.rs  github_copilot.rs  mod.rs  oauth_page.rs  openai_codex.rs  pkce.rs  types.rs
crates/ai/tests/: anthropic_sse_e2e.rs  models_catalog.rs  provider_request_metadata.rs  provider_terminal_events.rs  support_http.rs
crates/ai/tests/support/: mod.rs
crates/knuth-agent/: Cargo.toml
crates/knuth-agent/examples/: actor.rs
crates/knuth-agent/src/: actor.rs  agent_loop.rs  agent_step.rs  event_log.rs  harness.rs  lib.rs  tools.rs
crates/knuth-agent/src/tools/: bash.rs  fs.rs  mod.rs  python.rs  tools.rs
crates/knuth-agent/src/tools/descriptions/: bash.md  edit_file.md  python.md  read_file.md  write_file.md
crates/knuth-cli/: Cargo.toml
crates/knuth-cli/src/: config.rs  main.rs
crates/knuth-core/: Cargo.toml
crates/knuth-core/src/: events.rs  lib.rs  store.rs
crates/knuth-runtime/: Cargo.toml
crates/knuth-runtime/src/: lib.rs
docs/superpowers/plans/: 2026-07-09-ai-crate-complete-repair.md
