[package]
name = "ai"
version = "0.75.0"
edition = "2024"
rust-version = "1.85"
description = "Rust rewrite of the original pi AI client — unified streaming LLM client across Anthropic / OpenAI / Google / Bedrock / Mistral and OpenAI-compatible endpoints."
license = "MIT"
repository = "https://github.com/earendil-works/pi"
authors = ["earendil-works"]

[lib]
name = "ai"
path = "src/lib.rs"

[features]
default = ["anthropic", "faux"]

# Each provider is opt-in via feature so a thin consumer can avoid pulling SDK glue it doesn't need.
anthropic = []
openai-completions = []
openai-responses = []
openai-codex-responses = []
azure-openai-responses = []
google = []
google-vertex = []
amazon-bedrock = []
cloudflare = []
mistral = []
faux = []

# Image-generation providers are gated separately.
openrouter-images = []

# Bundle everything (used by the workspace's smoke tests).
all-providers = [
    "anthropic",
    "openai-completions",
    "openai-responses",
    "openai-codex-responses",
    "azure-openai-responses",
    "google",
    "google-vertex",
    "amazon-bedrock",
    "cloudflare",
    "mistral",
    "faux",
    "openrouter-images",
]

[dependencies]
# Async runtime + HTTP/SSE.
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
futures-core = "0.3"
pin-project-lite = "0.2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "gzip",
] }
async-trait = { workspace = true }
bytes = "1"

# Serialization. Tool-call args + provider payloads are JSON-shaped.
serde = { workspace = true }
serde_json = { workspace = true }

# Misc utilities.
thiserror = { workspace = true }
chrono = { workspace = true }
url = "2"
percent-encoding = "2"
once_cell = "1"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
async-stream = "0.3"
jsonwebtoken = { version = "9", default-features = false, features = [
    "use_pem",
] }
uuid = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
serde_yaml = "0.9"
tempfile = "3"

[[example]]
name = "anthropic_hello"
required-features = ["anthropic"]

[[example]]
name = "gpt55_hello"
required-features = ["openai-responses"]

[lints]
workspace = true
