[package]
name = "knuth-agent"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ai = { path = "../ai" }
knuth-core = { path = "../knuth-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
encoding_rs = "0.8"
base64 = "0.22"
