[package]
name = "knuth-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ignore = { workspace = true }
ai = { path = "../ai", features = [
    "openai-completions",
    "openai-responses",
    "openai-codex-responses",
    "anthropic",
] }
knuth-core = { path = "../knuth-core" }
knuth-agent = { path = "../knuth-agent" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
dotenvy = "0.15.7"
clap = { version = "4.6.1", features = ["derive", "env"] }
reedline = "0.48.0"
crossterm = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }