[package]
name = "knuth-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ai = { path = "../ai" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ignore = { workspace = true }
thiserror = { workspace = true }
uuid = { features = ["serde", "v7"], version = "=1.23" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-core = { version = "0.3" }
tracing = { workspace = true }
sha2 = { version = "0.10" }